--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,35 @@ html {
 #content{
 
 }
+
+#content .content-section {
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 64px 0;
+}
+
+#content .section-heading {
+    font-size: 30px;
+    font-weight: 500;
+    text-align: center;
+    /* letter-spacing tăng giảm khoảng cách giữa cách chữ */
+    letter-spacing: 4px; 
+}
+
+#content .section-sub-heading {
+    font-size: 16px;
+    text-align: center;
+    margin-top: 25px;
+
+}
+
+#content .about-text {
+    margin-top: 25px;
+    font-size: 15px;
+}
+
+
 #footer{
 
 }
