--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,419 +1,484 @@
 /* Reset css */
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .clear {
-    /* dùng để giải quyết vấn đề float thẻ cha ko ôm được các thẻ con */
-    clear: both;
+  /* dùng để giải quyết vấn đề float thẻ cha ko ôm được các thẻ con */
+  clear: both;
+}
+
+/* Common là những cái dùng chung */
+.row {
+  margin-left: -8px;
+  margin-right: -8px;
+}
+
+/* thêm 1 element giả ở đầu là before ở cuối là after  */
+.row::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+
+/* col viết tắt của column */
+.col {
+  float: left;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+.col-half {
+  width: 50%;
+}
+
+.col-full {
+  width: 100%;
+}
+
+.col-third {
+  width: 33.3333333%;
+}
+
+.text-center {
+  text-align: center !important;
 }
 
 .text-white {
-    color: #fff !important;
+  color: #fff !important;
 }
 
-#main{
-    height: 46px;
-    background-color: #000;
+.mt-8 {
+  margin-top: 8px !important;
 }
 
-#header{
-    height: 46px;
-    background-color: #000;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
+.mt-16 {
+  margin-top: 16px !important;
+}
+
+#main {
+  height: auto;
+}
+
+#header {
+  height: 46px;
+  background-color: #000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
 }
 
 #nav {
-    display: inline-block;
+  display: inline-block;
 }
 
-#nav, .subnav {
-    list-style-type: none;
+#nav,
+.subnav {
+  list-style-type: none;
 }
 
 #nav > li {
-    display: inline-block;
+  display: inline-block;
 }
 
 #nav li {
-    position: relative;
+  position: relative;
 }
 
 #nav li:hover .subnav {
-    display: block;
+  display: block;
 }
 
 #nav > li > a {
-    color: #fff;
-    text-transform: uppercase;
+  color: #fff;
+  text-transform: uppercase;
 }
 
-#nav  li  a {
-    /* color: #fff; */
-    text-decoration: none;
-    line-height: 46px;
-    padding: 0 24px;
-    display: inline-block;
+#nav li a {
+  /* color: #fff; */
+  text-decoration: none;
+  line-height: 46px;
+  padding: 0 24px;
+  display: inline-block;
 }
 
-#nav > li:hover > a ,
-#nav .subnav li:hover  {
-    color: #000;
-    background-color: #ccc;
+#nav > li:hover > a,
+#nav .subnav li:hover {
+  color: #000;
+  background-color: #ccc;
 }
 
 #nav .nav-arrow-down {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 #header .search-btn {
-    float: right;
-    padding: 0 21px;
-    cursor: pointer;
-    /* cursor thuộc tính để quyết định thay đổi hình dạng của cái trỏ chuột */
+  float: right;
+  padding: 0 21px;
+  cursor: pointer;
+  /* cursor thuộc tính để quyết định thay đổi hình dạng của cái trỏ chuột */
 }
 
 #header .search-btn:hover {
-    background-color: #f44336!important;
+  background-color: #f44336 !important;
 }
 
 #header .search-icon {
-    font-size: 20px;
-    color: #fff;
-    line-height: 46px;
-
+  font-size: 20px;
+  color: #fff;
+  line-height: 46px;
 }
 
 #nav .subnav {
-    display: none;
-    position: absolute;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    min-width: 150px;
-    left: 0;
-    top: 100%;
-
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  min-width: 150px;
+  left: 0;
+  top: 100%;
 }
 
 #nav .subnav a {
-    color: #000;
-    padding: 0 12px;
-    line-height: 38px;
+  color: #000;
+  padding: 0 12px;
+  line-height: 38px;
 }
 
-
-#slider{
-    padding-top: 50%; /*50% chiều ngang của chính nó*/
-    margin-top: 46px;
-    background: url('/assets/img/slider/slider1.jpg') top center / cover no-repeat;
-    position: relative;
+#slider {
+  padding-top: 50%; /*50% chiều ngang của chính nó*/
+  margin-top: 46px;
+  background: url("/assets/img/slider/slider1.jpg") top center / cover no-repeat;
+  position: relative;
 }
 
 #slider .text-content {
-    position: absolute;
-    color: #fff;
-    bottom: 48px;
-    /* cách căn giữa cách 1 */
-    /* left: 50%;
+  position: absolute;
+  color: #fff;
+  bottom: 48px;
+  /* cách căn giữa cách 1 */
+  /* left: 50%;
     transform: translateX(-50%); */
-    /* cách căn giữa cách 2 */
-    /* left: 0;
+  /* cách căn giữa cách 2 */
+  /* left: 0;
     right: 0; */
-    /* cách căn giữa cách 3 */
-    width: 100%;
-    text-align: center;
-
+  /* cách căn giữa cách 3 */
+  width: 100%;
+  text-align: center;
 }
 
 #slider .text-heading {
-    font-weight: 500;
-    font-size: 24px;
+  font-weight: 500;
+  font-size: 24px;
 }
 
 #slider .text-description {
-    font-size: 15px;
-    margin-top: 25px;
+  font-size: 15px;
+  margin-top: 25px;
 }
 
-#content{
-
+#content {
 }
 
 #content .content-section {
-    width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 64px 0;
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 64px 0;
+  
 }
 
 #content .section-heading {
-    font-size: 30px;
-    font-weight: 500;
-    text-align: center;
-    /* letter-spacing tăng giảm khoảng cách giữa cách chữ */
-    letter-spacing: 4px; 
+  font-size: 30px;
+  font-weight: 500;
+  text-align: center;
+  /* letter-spacing tăng giảm khoảng cách giữa cách chữ */
+  letter-spacing: 4px;
 }
 
 #content .section-sub-heading {
-    font-size: 16px;
-    text-align: center;
-    margin-top: 25px;
-    font-style: italic;
-    /* opacity độ trong suốt */
-    opacity: 0.6;
-
+  font-size: 16px;
+  text-align: center;
+  margin-top: 25px;
+  font-style: italic;
+  /* opacity độ trong suốt */
+  opacity: 0.6;
 }
 
 #content .about-text {
-    margin-top: 25px;
-    font-size: 15px;
-    /* justify cân đều 2 bên của 1 đoạn văn */
-    text-align: justify;
-    line-height: 1.4;
+  margin-top: 25px;
+  font-size: 15px;
+  /* justify cân đều 2 bên của 1 đoạn văn */
+  text-align: justify;
+  line-height: 1.4;
 }
 
 #content .member-list {
-    margin-top: 48px;
-    /* overflow: hidden; */
+  margin-top: 48px;
+  /* overflow: hidden; */
 }
 
 #content .member-name {
-    font-size: 15px;
-
+  font-size: 15px;
 }
 
 #content .member-img {
-    margin-top: 15px;
-    width: 154px;
-
+  margin-top: 15px;
+  width: 154px;
 }
 
 #content .member-item {
-    float: left;
-    width: calc(100%/3);
-    text-align: center;
+  /* float: left;
+    width: calc(100%/3); */
+  text-align: center;
 }
-
 
 /* tour section */
 .tour-section {
-    background-color: #000;
+  background-color: #000;
+  /* max-height: 1000px;
+  height: 835px;
+  padding-bottom: 210px; */
 }
 
 .ticket-list {
-    background-color: #fff;
-    margin-top: 40px;
+  background-color: #fff;
+  margin-top: 40px;
 }
 
 .ticket-list li {
-    color: #757575;
-    font-size: 15px;
-    padding: 11px 16px;
-    border-bottom: 1px solid #ddd;
-    list-style: none;
+  color: #757575;
+  font-size: 15px;
+  padding: 11px 16px;
+  border-bottom: 1px solid #ddd;
+  list-style: none;
 }
 
 .ticket-list .sold-out {
-    background-color: #f44336;
-    color: #fff;
-    padding: 3px 4px;
-    margin-left: 16px;
+  background-color: #f44336;
+  color: #fff;
+  padding: 3px 4px;
+  margin-left: 16px;
 }
 
 .ticket-list .quantity {
-    float: right;
-    width: 24px;
-    height: 24px;
-    background-color: #000;
-    color: #fff;
-    text-align: center;
-    line-height: 24px;
-    border-radius: 50%;
-    margin-top: -3px;
-
+  float: right;
+  width: 24px;
+  height: 24px;
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  line-height: 24px;
+  border-radius: 50%;
+  margin-top: -3px;
 }
 
 /* Places */
 
 .places-list {
-    margin: 32px -8px 48px;
+  margin-top: 32px;
+  margin-bottom: 48px;
 }
 
 .place-item {
-    float: left;
-    width: calc(100%/3);
-    padding: 0 8px;
+  /* float: left; */
+  width: calc(100% / 3);
+  /* padding: 0 8px; */
 }
 
 .place-img:hover {
-    opacity: 0.6;
+  opacity: 0.6;
 }
 
 .place-img {
-    width: 100%;
-
-
+  width: 100%;
 }
-.place-body{
-    background-color: #fff;
-    padding: 16px;
-    font-size: 15px;
+.place-body {
+  background-color: #fff;
+  padding: 16px;
+  font-size: 15px;
 }
 
-.place-heading{
-    font-size: 15px;
-    font-weight: 550;
+.place-heading {
+  font-size: 15px;
+  font-weight: 550;
 }
 
-.place-time{
-    margin-top: 15px; 
-    color: #757575;   
+.place-time {
+  margin-top: 15px;
+  color: #757575;
 }
 
-.place-description{
-    margin-top: 15px;
-    line-height: 1.4;
+.place-description {
+  margin-top: 15px;
+  line-height: 1.4;
 }
 
-.place-buy-btn{
-    color: #fff;
-    background-color: #000;
-    text-decoration: none;
-    padding: 11px 15px;
-    display: inline-block;
-    margin-top: 15px;
+.place-buy-btn {
+  color: #fff;
+  background-color: #000;
+  text-decoration: none;
+  padding: 11px 15px;
+  display: inline-block;
+  margin-top: 15px;
 }
 
 .place-buy-btn:hover {
-    background-color: #ccc;
+  background-color: #ccc;
 }
-
-#footer{
-
-}
-
 
 .modal {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.4);
-    align-items: center;
-    justify-content: center;
-    display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.4);
+  align-items: center;
+  justify-content: center;
+  display: none;
 }
 
-
 .modal.open {
-    display: flex;
+  display: flex;
 }
 
 .modal .modal-container {
-    background-color: #fff;
-    width: 900px;
-    min-height: 200px;
-    position: relative;
-    max-width: calc(100%-32px);
-    animation: modalFaceIn ease 0.8s;
+  background-color: #fff;
+  width: 900px;
+  min-height: 200px;
+  position: relative;
+  max-width: calc(100%-32px);
+  animation: modalFaceIn ease 0.8s;
 }
 
-
 .modal .modal-header {
-    display: flex;
-    background-color: #009688;
-    height: 130px;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    color: #fff;
+  display: flex;
+  background-color: #009688;
+  height: 130px;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  color: #fff;
 }
 
 .modal .modal-icon-bag {
-    margin-right: 16px;
+  margin-right: 16px;
 }
 
 .modal .modal-close {
-    right: 0;
-    top: 0;
-    color: #fff;
-    position: absolute;
-    padding: 12px;
-    font-size: 14px;
-    cursor: pointer;
-    font-weight: bold;
-
+  right: 0;
+  top: 0;
+  color: #fff;
+  position: absolute;
+  padding: 12px;
+  font-size: 14px;
+  cursor: pointer;
+  font-weight: bold;
 }
 
 .modal .modal-close:hover {
-    opacity: 1;
-    color: #000;
-    background-color: #ccc;
+  opacity: 1;
+  color: #000;
+  background-color: #ccc;
 }
 
-
 .modal .modal-body {
-    padding: 16px;
+  padding: 16px;
 }
 
 .modal .modal-label {
-    display: block;
-    font-size: 15px;
-    margin-bottom: 12px;
+  display: block;
+  font-size: 15px;
+  margin-bottom: 12px;
 }
 
 .modal .modal-input {
-    border: 1px solid #ccc;
-    width: 100%;
-    font-size: 15px;
-    padding: 10px;
-    margin-bottom: 24px;
+  border: 1px solid #ccc;
+  width: 100%;
+  font-size: 15px;
+  padding: 10px;
+  margin-bottom: 24px;
 }
 
 #buy-tickets {
-    background-color: #009688;
-    color: #fff;
-    border: none;
-    width: 100%;
-    font-size: 15px;
-    padding: 16px;
-    cursor: pointer;
+  background-color: #009688;
+  color: #fff;
+  border: none;
+  width: 100%;
+  font-size: 15px;
+  padding: 16px;
+  cursor: pointer;
 }
 
 #buy-tickets:hover {
-    opacity: 0.7;
+  opacity: 0.7;
 }
 
 .modal .modal-footer {
-    text-align: right;
-    padding: 16px;
-    margin-bottom: 10px;
+  text-align: right;
+  padding: 16px;
+  margin-bottom: 10px;
 }
 
 .modal .modal-footer a {
-    color: #2196F3;
+  color: #2196f3;
 }
 
 /* keyframes là 1 cái tạo ra cái tạo ra cái chuyển động liên tiếp hình ảnh tĩnh tạo ra cái hoạt họa  */
 @keyframes modalFaceIn {
-    from {
-        transform: translateY(-140px);
-        opacity: 0;
-    }
+  from {
+    transform: translateY(-140px);
+    opacity: 0;
+  }
 
-    to {
-        transform: translateY(0);
-        opacity: 1;
-    }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.contact-content {
+  margin-top: 46px;
+}
+
+.contact-info {
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+.contact-info i[class*="ti-"] {
+  width: 30px;
+  display: inline-block;
+  color: #000;
+}
+
+.contact-form {
+  font-size: 15px;
+}
+
+.contact-form .form-control {
+  padding: 11px;
+  border: 1px solid #ccc;
+  width: 100%;
+}
+
+.contact-form .form-submit-btn {
+  color: #fff;
+  background-color: #000;
+  padding: 10px 16px;
+  float: right;
+}
+
+#footer {
 }
