--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,21 +1,57 @@
 /* PC */
 @media (min-width: 1024px) {
-
 }
 
-/* Tablet */ 
+/* Tablet */
 @media (min-width: 740px) and (max-width: 1023px) {
-
 }
-
 
 /* Mobile */
 @media (max-width: 740px) {
-    #nav > li {
-        display: block;
-    }
+  .s-col-full {
+    width: 100%;
+  }
 
-    #header .search-btn {
-        display: none;
-    }
+  #header {
+    overflow: hidden;
+  }
+
+  #header .mobile-menu-btn {
+    display: block;
+  }
+
+  #header .search-btn {
+    display: none;
+  }
+  #nav {
+    display: block;
+  }
+
+  #nav > li {
+    display: block;
+  }
+
+  #nav > li:first-child {
+    display: inline-block;
+  }
+
+  #nav li a {
+    display: block;
+    padding: 1px 24px;
+  }
+
+  #nav .subnav {
+    /* reset về position mặc định */
+    position: initial;
+    background-color: #333;
+  }
+
+  #nav .subnav a {
+    color: #fff;
+    padding: 5px 41px;
+  }
+
+  #content .member-img {
+    width: 60%;
+  }
 }
