--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -8,8 +8,13 @@
 
 /* Mobile */
 @media (max-width: 740px) {
+  .s-full-width,
   .s-col-full {
-    width: 100%;
+    width: 100% !important;
+  }
+
+  .s-mt-8 {
+    margin-top: 8px !important;
   }
 
   #header {
@@ -53,5 +58,9 @@
 
   #content .member-img {
     width: 60%;
+  }
+
+  .contact-form {
+    margin-top: 16px;
   }
 }
