--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,7 @@ html {
   display: inline-block;
   margin-top: 15px;
   border: none;
+  text-align: center;
 }
 
 .btn:hover {
@@ -82,6 +83,10 @@ html {
 
 .mt-16 {
   margin-top: 16px !important;
+}
+
+.mt-32 {
+  margin-top: 32px !important;
 }
 
 #main {
