--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -2,6 +2,43 @@
 @media (min-width: 1024px) {
 }
 
+/* Tablet and mobile */
+@media (max-width: 1023px) {
+  .btn {
+    padding: 15px 16px;
+  }
+
+  #nav .subnav a {
+    padding: 5px 12px;
+  }
+
+  .contact-form .form-control {
+    padding: 15px;
+    font-size: 18px;
+  }
+
+  .contact-info {
+    line-height: 2;
+  }
+
+  .contact-submit-btn {
+    font-size: 18px;
+  }
+
+  .socials-list {
+    font-size: 48px;
+  }
+
+  #footer .socials-list a {
+    margin: 0 8px;
+  }
+
+  #footer .copyright a {
+    padding: 12px 0;
+    display: inline-block;
+  }
+}
+
 /* Tablet */
 @media (min-width: 740px) and (max-width: 1023px) {
 }
@@ -61,6 +98,6 @@
   }
 
   .contact-form {
-    margin-top: 16px;
+    margin-top: 32px;
   }
 }
