--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,8 @@ html {
   margin-top: 15px;
   border: none;
   text-align: center;
+  appearance: none;
+  -webkit-appearance: none;
 }
 
 .btn:hover {
@@ -486,6 +488,14 @@ html {
 .contact-info {
   font-size: 18px;
   line-height: 1.5;
+}
+
+.contact-info a {
+  color: #101aef;
+}
+
+.contact-info a:hover {
+  color: #2196f3;
 }
 
 .contact-info i[class*="ti-"] {
